WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231112
Some layout tests with Japanese glyphs fail if Japanese is included in the system "Preferred Languages" settings
https://bugs.webkit.org/show_bug.cgi?id=231112
Summary
Some layout tests with Japanese glyphs fail if Japanese is included in the sy...
Simon Fraser (smfr)
Reported
2021-10-01 16:47:20 PDT
I had Japanse in my list of "Preferred Languages" in the Language & Region system settings on Big Sur, and this causes a subset of layout tests to fail, including: fast/ruby/ruby-justification.html fast/text/backslash-to-yen-sign-euc.html and tests with "ideograph" in the name. We need to fix WTR to make tests pass independently of system language settings.
Attachments
Patch
(1.31 KB, patch)
2021-10-01 18:40 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2021-10-01 17:36:39 PDT
I can reproduce this.
Myles C. Maxfield
Comment 2
2021-10-01 17:38:25 PDT
Fixing DRT would be super difficult (bordering on "impossible") here. Fixing WKTR is probably not very difficult. We already have infrastructure for mocking the system font. We probably should just always enable that infrastructure.
Myles C. Maxfield
Comment 3
2021-10-01 18:40:45 PDT
Created
attachment 439946
[details]
Patch
EWS
Comment 4
2021-10-03 10:10:52 PDT
Committed
r283468
(
242445@main
): <
https://commits.webkit.org/242445@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 439946
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-10-03 10:11:19 PDT
<
rdar://problem/83815251
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug