Some layout tests with Japanese glyphs fail if Japanese is included in the system "Preferred Languages" settings https://bugs.webkit.org/show_bug.cgi?id=231112

Reviewed by Simon Fraser.

Simply set the default locale to en-US. Tests can still override it.

* WebKitTestRunner/TestOptions.cpp:
(WTR::TestOptions::defaults):


Canonical link: https://commits.webkit.org/242445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283468 268f45cc-cd09-0410-ab3c-d52691b4dbfc